--- a/_config.yml
+++ b/_config.yml
@@ -16,12 +16,12 @@
 
 ## => Site Settings
 ##############################
-text_skin: ocean # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
-highlight_theme: tomorrow # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
+text_skin: "ocean" # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
+highlight_theme: "tomorrow" # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : "https://ungdoong.github.io"# the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : "/"# does not include hostname
 title   : "Taekjin Jeong"
-description: ㅇ_ㅇ
+description: "Taekjin's Blog"
 
 
 ## => Language and Timezone
