[Add]블록체인이 은행을 대체할 수 있을까

--- a/_config.yml
+++ b/_config.yml
@@ -33,11 +33,11 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ## => Author and Social
 ##############################
 author:
-  type      : # "person" (default), "organization"
-  name      : Your Name
-  url       :
+  type      : "person" # "person" (default), "organization"
+  name      : "정택진"
+  url       : "https://ungdoong.github.io"
   avatar    : # path or url of avatar image (square)
-  bio       : I am an amazing person.
+  bio       : ""
   email     :
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -48,13 +48,13 @@ author:
   zhihu     : # "user_name" the last part of your profile url, e.g. https://www.zhihu.com/people/user_name
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : "https://github.com/ungdoong" # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
 
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: ungdoong/ungdoong.github.io
 repository_tree: master
 
 
@@ -83,8 +83,8 @@ toc:
 ## => Markdown Enhancements
 ##############################
 ## Mathjax
-mathjax: # false (default), true
-mathjax_autoNumber: # false (default), true
+mathjax: "true" # false (default), true
+mathjax_autoNumber: "true" # false (default), true
 
 ## Mermaid
 mermaid: # false (default), true
@@ -107,7 +107,7 @@ sources: # bootcdn (default), unpkg
 ## => Sharing
 ##############################
 sharing:
-  provider: false # false (default), "addtoany", "addthis", "custom"
+  provider: "addtoany" # false (default), "addtoany", "addthis", "custom"
 
   ## AddThis
   addthis:
